Cambios T-COCHE YA

--- a/css/tooplate.css
+++ b/css/tooplate.css
@@ -290,19 +290,19 @@ strong {
 }
 
 .site-about-header {
-  background-image: url('../images/header/briana-tozour-V_Nkf1E-vYA-unsplash.jpg');
+  background-image: url('../images/Ser.jpg');
 }
 
 .site-menu-header {
-  background-image: url('../images/header/luisa-brimble-aFzg83dvnAI-unsplash.jpg');
+  background-image: url('../images/Maya-TuxPakal.jpg');
 }
 
 .site-news-header {
-  background-image: url('../images/header/priscilla-du-preez-W3SEyZODn8U-unsplash.jpg');
+  background-image: url('../images/Eventos.jpg');
 }
 
 .site-contact-header {
-  background-image: url('../images/header/rod-long-I79Pgmhmy5M-unsplash.jpg');
+  background-image: url('../images/Ayuda.jpg');
 }
 
 .overlay {
