se corrigio la página index

--- a/css/tooplate.css
+++ b/css/tooplate.css
@@ -690,7 +690,7 @@ strong {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  height: 500px;
+  height: 15rem;
 }
 
 
